<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mavlink2roboclaw</name>
  <version>0.0.0</version>
  <description>Transform ActuatorControl messages from mavros to roboclaw input messages</description>
  <maintainer email="pierce@ladonrobotics.com">pierce</maintainer>
  <license>Copyright Ladon Robotics (c) 2022. All rights reserved.</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>roboclaw</depend>
  <depend>mavros_msgs</depend>
  <depend>ssp_interfaces</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
